--- a/Table 3.Rmd
+++ b/Table 3.Rmd
@@ -174,7 +174,7 @@ a=anova(m1,m2, test="F")
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t) = M1 + \\beta W_{t}$", 
+  Model="$ln(N_t) = M1 + \\beta V_{t}$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   MAE=round(mean(abs(residuals(get(mod)))),digits=3), 
@@ -258,7 +258,7 @@ seltable=rbind(seltable,tmp1)
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t) = M2 + s(V_t)$", 
+  Model="$ln(N_t) = M2 + s(U_t)$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   MAE=round(mean(abs(residuals(get(mod)))),digits=3), 
@@ -276,7 +276,7 @@ a=anova(m1,m2, test="F")
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t) = M2 + \\beta W_{t}$", 
+  Model="$ln(N_t) = M2 + \\beta V_{t}$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   MAE=round(mean(abs(residuals(get(mod)))),digits=3), 
@@ -312,7 +312,7 @@ a=anova(m1,m2, test="F")
 i=2; mod=paste("m",i,sep="")
 aa = summary(get(mod))
 tmp1=data.frame(
-  Model="$ln(N_t) = M2 + s(X_{t})$", 
+  Model="$ln(N_t) = M2 + s(X_{t-1})$", 
   Residual.df=round(a[["Resid. Df"]][i],digits=1), 
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   MAE=round(mean(abs(residuals(get(mod)))),digits=3), 
